--- a/2022PAI9056_ML_EndSem.ipynb
+++ b/2022PAI9056_ML_EndSem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDwCY8gvfvgnFTEhxKkc9P",
+      "authorship_tag": "ABX9TyPbZ6V3sUdIP9fkBykAe++B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,30 +30,35 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "from sklearn import datasets\n",
+        "from scipy.stats import norm\n",
         "\n",
-        "# Load the IRIS dataset\n",
-        "iris = datasets.load_iris()\n",
-        "X = iris.data  # Features\n",
-        "Y = iris.target  # Target variable\n",
+        "# 2. Load the IRIS dataset (you can use sklearn or any other source)\n",
+        "from sklearn.datasets import load_iris\n",
+        "iris = load_iris()\n",
+        "X = iris.data[:, 0]  # SepalLength\n",
+        "y = iris.target\n",
         "\n",
-        "# Given means and variances for Setosa, Versicolor, and Virginia\n",
-        "class_params = {\n",
-        "    'Setosa': (5, 0.34),\n",
-        "    'Versicolor': (5.93, 0.51),\n",
-        "    'Virginia': (6.98, 0.62)\n",
+        "# 3. Define Gaussian distribution parameters\n",
+        "params = {\n",
+        "    'Setosa': {'mean': 5, 'variance': 0.34},\n",
+        "    'Versicolor': {'mean': 5.93, 'variance': 0.51},\n",
+        "    'Virginia': {'mean': 6.98, 'variance': 0.62}\n",
         "}\n",
         "\n",
-        "# Define the Gaussian probability density function\n",
-        "def gaussian_pdf(x, mean, variance):\n",
-        "    return (1 / (np.sqrt(2 * np.pi * variance)) * np.exp(-((x - mean) ** 2) / (2 * variance)))\n",
+        "# 4. Define a function to calculate the PDF for a given Gaussian distribution\n",
+        "def calculate_pdf(x, mean, variance):\n",
+        "    return norm.pdf(x, loc=mean, scale=np.sqrt(variance))\n",
         "\n",
-        "# Calculate the posterior probabilities for each class\n",
+        "# 5. Calculate posterior probabilities\n",
+        "x_value = 7\n",
         "posterior_probabilities = {}\n",
-        "for class_name, (mean, variance) in class_params.items():\n",
-        "    prior = 1 / len(class_params)  # Equiprobability for all classes\n",
-        "    likelihood = gaussian_pdf(7, mean, variance)\n",
-        "    posterior = likelihood * prior\n",
+        "\n",
+        "for class_name, class_params in params.items():\n",
+        "    mean = class_params['mean']\n",
+        "    variance = class_params['variance']\n",
+        "    prior = 1/3  # All classes have equal prior probabilities in this case\n",
+        "    likelihood = calculate_pdf(x_value, mean, variance)\n",
+        "    posterior = prior * likelihood\n",
         "    posterior_probabilities[class_name] = posterior\n",
         "\n",
         "# Normalize the posterior probabilities\n",
@@ -61,31 +66,31 @@
         "for class_name in posterior_probabilities:\n",
         "    posterior_probabilities[class_name] /= total_posterior\n",
         "\n",
-        "# Print the results\n",
+        "# 6. Verify the results\n",
+        "print(\"Posterior Probabilities:\")\n",
         "for class_name, posterior in posterior_probabilities.items():\n",
-        "    print(f'P(X=7, Y={class_name}) = {posterior:.4f}')\n",
+        "    print(f\"P(X={x_value}, Y={class_name}): {posterior:.4f}\")\n",
         "\n",
-        "# Verification\n",
-        "sum_posterior = sum(posterior_probabilities.values())\n",
-        "print(f'Sum of posterior probabilities: {sum_posterior:.4f}')\n"
+        "# Check if the sum of probabilities equals 1 (due to normalization)\n",
+        "assert np.isclose(sum(posterior_probabilities.values()), 1.0)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "FHg4w7r4EQlE",
-        "outputId": "e87b7719-e8a4-41c7-ebba-bec3f5b68edb"
+        "id": "rnTkpyi3FjhV",
+        "outputId": "5000b2be-bf7d-46d2-aa97-06414035a380"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "P(X=7, Y=Setosa) = 0.0028\n",
-            "P(X=7, Y=Versicolor) = 0.2634\n",
-            "P(X=7, Y=Virginia) = 0.7338\n",
-            "Sum of posterior probabilities: 1.0000\n"
+            "Posterior Probabilities:\n",
+            "P(X=7, Y=Setosa): 0.0028\n",
+            "P(X=7, Y=Versicolor): 0.2634\n",
+            "P(X=7, Y=Virginia): 0.7338\n"
           ]
         }
       ]
