--- a/Project/ISL/Action Detection Refined.ipynb
+++ b/Project/ISL/Action Detection Refined.ipynb
@@ -92,7 +92,9 @@
       "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
       "\u001b[?25hRequirement already satisfied: numpy>=1.17.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from opencv-python) (1.23.5)\n",
       "Building wheels for collected packages: opencv-python\n",
-      "  Building wheel for opencv-python (pyproject.toml) ... \u001b[?25l-"
+      "  Building wheel for opencv-python (pyproject.toml) ... \u001b[?25l|^C\n",
+      "\u001b[?25canceled\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
