--- a/Project/ISL/MediaPipe.ipynb
+++ b/Project/ISL/MediaPipe.ipynb
@@ -2,47 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting mediapipe\n",
-      "  Using cached mediapipe-0.9.1.0-cp39-cp39-macosx_10_15_x86_64.whl (35.2 MB)\n",
-      "Requirement already satisfied: absl-py in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from mediapipe) (2.0.0)\n",
-      "Collecting attrs>=19.1.0 (from mediapipe)\n",
-      "  Using cached attrs-23.1.0-py3-none-any.whl (61 kB)\n",
-      "Requirement already satisfied: flatbuffers>=2.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from mediapipe) (23.5.26)\n",
-      "Requirement already satisfied: matplotlib in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from mediapipe) (3.8.2)\n",
-      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from mediapipe) (1.23.5)\n",
-      "Collecting opencv-contrib-python (from mediapipe)\n",
-      "  Using cached opencv-contrib-python-4.8.1.78.tar.gz (151.2 MB)\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting protobuf<4,>=3.11 (from mediapipe)\n",
-      "  Using cached protobuf-3.20.3-cp39-cp39-macosx_10_9_x86_64.whl (982 kB)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib->mediapipe) (1.2.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib->mediapipe) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib->mediapipe) (4.46.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib->mediapipe) (1.4.5)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/ranjanpatra/Library/Python/3.9/lib/python/site-packages (from matplotlib->mediapipe) (23.2)\n",
-      "Requirement already satisfied: pillow>=8 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib->mediapipe) (10.1.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib->mediapipe) (3.1.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/ranjanpatra/Library/Python/3.9/lib/python/site-packages (from matplotlib->mediapipe) (2.8.2)\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib->mediapipe) (6.1.1)\n",
-      "Requirement already satisfied: zipp>=3.1.0 in /Users/ranjanpatra/Library/Python/3.9/lib/python/site-packages (from importlib-resources>=3.2.0->matplotlib->mediapipe) (3.17.0)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/ranjanpatra/Library/Python/3.9/lib/python/site-packages (from python-dateutil>=2.7->matplotlib->mediapipe) (1.16.0)\n",
-      "Building wheels for collected packages: opencv-contrib-python\n",
-      "  Building wheel for opencv-contrib-python (pyproject.toml) ... \u001b[?25l|^C\n",
-      "\u001b[?25canceled\n",
-      "\u001b[31mERROR: Operation cancelled by user\u001b[0m\u001b[31m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install mediapipe"
    ]
@@ -58,21 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'cv2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/ranjanpatra/Documents/GitHub/E-Mtech/E-Mtech/Project/ISL/MediaPipe.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ranjanpatra/Documents/GitHub/E-Mtech/E-Mtech/Project/ISL/MediaPipe.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcv2\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ranjanpatra/Documents/GitHub/E-Mtech/E-Mtech/Project/ISL/MediaPipe.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmediapipe\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mmp\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cv2'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import mediapipe as mp\n"
@@ -85,7 +35,9 @@
    "outputs": [],
    "source": [
     "mp_hands = mp.solutions.hands\n",
-    "hands = mp_hands.Hands()\n"
+    "hands = mp_hands.Hands()\n",
+    "\n",
+    "hands.process()"
    ]
   },
   {
@@ -94,7 +46,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_path = '/Users/ranjanpatra/Documents/ISL_DATA_DICTIONARY/Extracted/ISL Dictionary/A/Actuary.mp4'\n",
+    "mp_hands."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video_path = r\"C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_DICTIONARY\\I\\ISL Dictionary\\A\\Alien_species.mp4\"\n",
     "cap = cv2.VideoCapture(video_path)\n"
    ]
   },
@@ -104,6 +65,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cv2\n",
+    "import mediapipe as mp\n",
+    "\n",
+    "# Initialize MediaPipe Hands\n",
+    "mp_hands = mp.solutions.hands\n",
+    "hands = mp_hands.Hands()\n",
+    "\n",
+    "# Video Capture (adjust the file path as needed)\n",
+    "video_path = r\"C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_DICTIONARY\\I\\ISL Dictionary\\A\\Alien_species.mp4\"\n",
+    "cap = cv2.VideoCapture(video_path)\n",
+    "\n",
     "while cap.isOpened():\n",
     "    ret, frame = cap.read()\n",
     "    if not ret:\n",
@@ -116,8 +88,15 @@
     "    results = hands.process(rgb_frame)\n",
     "\n",
     "    # Your custom processing logic here\n",
+    "    if results.multi_hand_landmarks:\n",
+    "        for hand_index, hand_landmarks in enumerate(results.multi_hand_landmarks):\n",
+    "            print(f\"Frame {cap.get(cv2.CAP_PROP_POS_FRAMES)} - Hand {hand_index + 1}:\")\n",
+    "            print(f\"Number of landmarks: {len(hand_landmarks.landmark)}\")\n",
     "\n",
-    "    # Display the processed frame (optional)\n",
+    "            for landmark_index, landmark in enumerate(hand_landmarks.landmark):\n",
+    "                print(f\"Landmark {landmark_index + 1}: x={landmark.x}, y={landmark.y}, z={landmark.z}\")\n",
+    "\n",
+    "    # Display the frame\n",
     "    cv2.imshow('Processed Frame', frame)\n",
     "\n",
     "    # Break the loop if 'q' key is pressed\n",
@@ -135,13 +114,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hands.close()\n"
+    "import cv2\n",
+    "import mediapipe as mp\n",
+    "\n",
+    "# Initialize MediaPipe Hands and Face Detection modules\n",
+    "mp_hands = mp.solutions.hands\n",
+    "mp_face_detection = mp.solutions.face_detection\n",
+    "\n",
+    "hands = mp_hands.Hands()\n",
+    "face_detection = mp_face_detection.FaceDetection()\n",
+    "\n",
+    "# Video Capture (adjust the file path as needed)\n",
+    "video_path = r\"C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_DICTIONARY\\I\\ISL Dictionary\\A\\Alien_species.mp4\"\n",
+    "cap = cv2.VideoCapture(video_path)\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "\n",
+    "    # Convert the BGR image to RGB\n",
+    "    rgb_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "    # Process the frame using the MediaPipe hands module\n",
+    "    hands_results = hands.process(rgb_frame)\n",
+    "\n",
+    "    # Process the frame using the MediaPipe face detection module\n",
+    "    face_results = face_detection.process(rgb_frame)\n",
+    "\n",
+    "    # Your custom processing logic for hands\n",
+    "    if hands_results.multi_hand_landmarks:\n",
+    "        for hand_index, hand_landmarks in enumerate(hands_results.multi_hand_landmarks):\n",
+    "            print(f\"Frame {cap.get(cv2.CAP_PROP_POS_FRAMES)} - Hand {hand_index + 1}:\")\n",
+    "            print(f\"Number of landmarks: {len(hand_landmarks.landmark)}\")\n",
+    "            # Additional hand processing logic if needed\n",
+    "            for landmark_index, landmark in enumerate(hand_landmarks.landmark):\n",
+    "                print(f\"Landmark {landmark_index + 1}: x={landmark.x}, y={landmark.y}, z={landmark.z}\")\n",
+    "\n",
+    "    # Your custom processing logic for faces\n",
+    "    if face_results.detections:\n",
+    "        for face_index, detection in enumerate(face_results.detections):\n",
+    "            print(f\"Frame {cap.get(cv2.CAP_PROP_POS_FRAMES)} - Face {face_index + 1}:\")\n",
+    "            print(f\"Face detection confidence: {detection.score[0]}\")\n",
+    "            # Additional face processing logic if needed\n",
+    "\n",
+    "            for landmark_index, landmark in enumerate(hand_landmarks.landmark):\n",
+    "                print(f\"Landmark {landmark_index + 1}: x={landmark.x}, y={landmark.y}, z={landmark.z}\") \n",
+    "\n",
+    "    # Display the frame\n",
+    "    cv2.imshow('Processed Frame', frame)\n",
+    "\n",
+    "    # Break the loop if 'q' key is pressed\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "# Release the video capture object and destroy windows\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mp.solutions.holistic.\n"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -155,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
