--- a/Project/ISL/MediaPipe.ipynb
+++ b/Project/ISL/MediaPipe.ipynb
@@ -225,6 +225,103 @@
    "source": [
     "mp.solutions.holistic.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  WARNING: Failed to remove contents in a temporary directory 'C:\\Users\\ranjan.patra\\AppData\\Roaming\\Python\\Python310\\site-packages\\~ediapipe'.\n",
+      "  You can safely remove it manually.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install -q mediapipe==0.10.0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget -q https://storage.googleapis.com/mediapipe-models/hand_landmarker/hand_landmarker/float16/1/hand_landmarker.task\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@markdown We implemented some functions to visualize the hand landmark detection results. <br/> Run the following cell to activate the functions.\n",
+    "\n",
+    "from mediapipe import solutions\n",
+    "from mediapipe.framework.formats import landmark_pb2\n",
+    "import numpy as np\n",
+    "\n",
+    "MARGIN = 10  # pixels\n",
+    "FONT_SIZE = 1\n",
+    "FONT_THICKNESS = 1\n",
+    "HANDEDNESS_TEXT_COLOR = (88, 205, 54) # vibrant green\n",
+    "\n",
+    "def draw_landmarks_on_image(rgb_image, detection_result):\n",
+    "  hand_landmarks_list = detection_result.hand_landmarks\n",
+    "  handedness_list = detection_result.handedness\n",
+    "  annotated_image = np.copy(rgb_image)\n",
+    "\n",
+    "  # Loop through the detected hands to visualize.\n",
+    "  for idx in range(len(hand_landmarks_list)):\n",
+    "    hand_landmarks = hand_landmarks_list[idx]\n",
+    "    handedness = handedness_list[idx]\n",
+    "\n",
+    "    # Draw the hand landmarks.\n",
+    "    hand_landmarks_proto = landmark_pb2.NormalizedLandmarkList()\n",
+    "    hand_landmarks_proto.landmark.extend([\n",
+    "      landmark_pb2.NormalizedLandmark(x=landmark.x, y=landmark.y, z=landmark.z) for landmark in hand_landmarks\n",
+    "    ])\n",
+    "    solutions.drawing_utils.draw_landmarks(\n",
+    "      annotated_image,\n",
+    "      hand_landmarks_proto,\n",
+    "      solutions.hands.HAND_CONNECTIONS,\n",
+    "      solutions.drawing_styles.get_default_hand_landmarks_style(),\n",
+    "      solutions.drawing_styles.get_default_hand_connections_style())\n",
+    "\n",
+    "    # Get the top left corner of the detected hand's bounding box.\n",
+    "    height, width, _ = annotated_image.shape\n",
+    "    x_coordinates = [landmark.x for landmark in hand_landmarks]\n",
+    "    y_coordinates = [landmark.y for landmark in hand_landmarks]\n",
+    "    text_x = int(min(x_coordinates) * width)\n",
+    "    text_y = int(min(y_coordinates) * height) - MARGIN\n",
+    "\n",
+    "    # Draw handedness (left or right hand) on the image.\n",
+    "    cv2.putText(annotated_image, f\"{handedness[0].category_name}\",\n",
+    "                (text_x, text_y), cv2.FONT_HERSHEY_DUPLEX,\n",
+    "                FONT_SIZE, HANDEDNESS_TEXT_COLOR, FONT_THICKNESS, cv2.LINE_AA)\n",
+    "\n",
+    "  return annotated_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
