--- a/Project/ISL/MediaPipe.ipynb
+++ b/Project/ISL/MediaPipe.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,9 +105,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "cap=cv2.VideoCapture(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "The path does not exist.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\Git_Repos\\E-Mtech\\Project\\ISL\\MediaPipe.ipynb Cell 7'\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ranjan.patra/OneDrive%20-%20Lingaro%20Sp.%20z%20o.%20o/Git_Repos/E-Mtech/Project/ISL/MediaPipe.ipynb#ch0000010?line=3'>4</a>\u001b[0m \u001b[39m# Initialize MediaPipe Hands\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ranjan.patra/OneDrive%20-%20Lingaro%20Sp.%20z%20o.%20o/Git_Repos/E-Mtech/Project/ISL/MediaPipe.ipynb#ch0000010?line=4'>5</a>\u001b[0m mp_hands \u001b[39m=\u001b[39m mp\u001b[39m.\u001b[39msolutions\u001b[39m.\u001b[39mhands\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ranjan.patra/OneDrive%20-%20Lingaro%20Sp.%20z%20o.%20o/Git_Repos/E-Mtech/Project/ISL/MediaPipe.ipynb#ch0000010?line=5'>6</a>\u001b[0m hands \u001b[39m=\u001b[39m mp_hands\u001b[39m.\u001b[39;49mHands()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ranjan.patra/OneDrive%20-%20Lingaro%20Sp.%20z%20o.%20o/Git_Repos/E-Mtech/Project/ISL/MediaPipe.ipynb#ch0000010?line=7'>8</a>\u001b[0m \u001b[39m# Video Capture (adjust the file path as needed)\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ranjan.patra/OneDrive%20-%20Lingaro%20Sp.%20z%20o.%20o/Git_Repos/E-Mtech/Project/ISL/MediaPipe.ipynb#ch0000010?line=8'>9</a>\u001b[0m video_path \u001b[39m=\u001b[39m \u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mC:\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mUsers\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mranjan.patra\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mOneDrive - Lingaro Sp. z o. o\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mDATA\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mIITJ\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mCourse\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mProjects\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mISL\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mISL_DICTIONARY\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mI\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mISL Dictionary\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mA\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mAlien_species.mp4\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\mediapipe\\python\\solutions\\hands.py:114\u001b[0m, in \u001b[0;36m__init__\u001b[1;34m(self, static_image_mode, max_num_hands, model_complexity, min_detection_confidence, min_tracking_confidence)\u001b[0m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\mediapipe\\python\\solution_base.py:271\u001b[0m, in \u001b[0;36m__init__\u001b[1;34m(self, binary_graph_path, graph_config, calculator_params, graph_options, side_inputs, outputs, stream_type_hints)\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: The path does not exist."
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import mediapipe as mp\n",
