--- a/Project/ISL/MediaPipe.ipynb
+++ b/Project/ISL/MediaPipe.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pip in /Users/ranjanpatra/Documents/GitHub/E-Mtech/E-Mtech/.venv/lib/python3.12/site-packages (23.3.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install --upgrade pip"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -9,42 +27,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting mediapipe\n",
-      "  Using cached mediapipe-0.9.1.0-cp39-cp39-macosx_10_15_x86_64.whl (35.2 MB)\n",
-      "Requirement already satisfied: absl-py in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from mediapipe) (2.0.0)\n",
-      "Collecting attrs>=19.1.0 (from mediapipe)\n",
-      "  Using cached attrs-23.1.0-py3-none-any.whl (61 kB)\n",
-      "Requirement already satisfied: flatbuffers>=2.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from mediapipe) (23.5.26)\n",
-      "Requirement already satisfied: matplotlib in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from mediapipe) (3.8.2)\n",
-      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from mediapipe) (1.23.5)\n",
-      "Collecting opencv-contrib-python (from mediapipe)\n",
-      "  Using cached opencv-contrib-python-4.8.1.78.tar.gz (151.2 MB)\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting protobuf<4,>=3.11 (from mediapipe)\n",
-      "  Using cached protobuf-3.20.3-cp39-cp39-macosx_10_9_x86_64.whl (982 kB)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib->mediapipe) (1.2.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib->mediapipe) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib->mediapipe) (4.46.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib->mediapipe) (1.4.5)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/ranjanpatra/Library/Python/3.9/lib/python/site-packages (from matplotlib->mediapipe) (23.2)\n",
-      "Requirement already satisfied: pillow>=8 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib->mediapipe) (10.1.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib->mediapipe) (3.1.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/ranjanpatra/Library/Python/3.9/lib/python/site-packages (from matplotlib->mediapipe) (2.8.2)\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib->mediapipe) (6.1.1)\n",
-      "Requirement already satisfied: zipp>=3.1.0 in /Users/ranjanpatra/Library/Python/3.9/lib/python/site-packages (from importlib-resources>=3.2.0->matplotlib->mediapipe) (3.17.0)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/ranjanpatra/Library/Python/3.9/lib/python/site-packages (from python-dateutil>=2.7->matplotlib->mediapipe) (1.16.0)\n",
-      "Building wheels for collected packages: opencv-contrib-python\n",
-      "  Building wheel for opencv-contrib-python (pyproject.toml) ... \u001b[?25l|^C\n",
-      "\u001b[?25canceled\n",
-      "\u001b[31mERROR: Operation cancelled by user\u001b[0m\u001b[31m\n",
+      "\u001b[31mERROR: Could not find a version that satisfies the requirement mediapipe (from versions: none)\u001b[0m\u001b[31m\n",
+      "\u001b[0m\u001b[31mERROR: No matching distribution found for mediapipe\u001b[0m\u001b[31m\n",
       "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "pip install mediapipe"
+    "pip install mediapipe=="
    ]
   },
   {
@@ -80,9 +70,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ranjanpatra/Documents/GitHub/E-Mtech/E-Mtech/Project/ISL/MediaPipe.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ranjanpatra/Documents/GitHub/E-Mtech/E-Mtech/Project/ISL/MediaPipe.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m mp_hands \u001b[39m=\u001b[39m mp\u001b[39m.\u001b[39msolutions\u001b[39m.\u001b[39mhands\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ranjanpatra/Documents/GitHub/E-Mtech/E-Mtech/Project/ISL/MediaPipe.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m hands \u001b[39m=\u001b[39m mp_hands\u001b[39m.\u001b[39mHands()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mp' is not defined"
+     ]
+    }
+   ],
    "source": [
     "mp_hands = mp.solutions.hands\n",
     "hands = mp_hands.Hands()\n"
@@ -155,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
